[metadata]
name = rsns
version = 0.0.1
author =  Peijin Zhang
author_email = bin.chen@njit.edu
description = Radio source near Sun
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peijin94/rsns
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = rsns
python_requires = >=3.8
install_requires =
    numpy

[options.packages.find]
where = rsns